[package]
name = "rush_c"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mongodb = "2.7.0-beta"
futures = "0.3.28"
serde = { version = "1.0.188", features = ["derive"] }
clap = { version = "4.4.3", features = [ "derive" ] }
http = "0.2.9"
reqwest = { version = "0.11.20", features = ["json"] }

[[bin]]
name = "file_records_init_sync"
path = "src/main.rs"

[[bin]]
name = "delete_all"
path = "src/delete_all.rs"
