[package]
name = "rush_c"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biliup = { path = "../biliup-rs/crates/biliup"}
tokio = { version = "1", features = ["full"] }
log = "0.4.20"
bytes = "1.5.0"
indicatif = "0.17.7"
anyhow = "1.0.75"
futures = "0.3.28"
reqwest = { version = "0.12.5", features = ["stream"] }
structopt = "0.3.26"
mongodb = "2.7.1"
serde = "1"
serde_json = { version = "1.0.107", features = [] }
tracing = "0.1.39"
tracing-subscriber = "0.3.17"

[[bin]]
name = "upload"
path = "src/upload.rs"

[[bin]]
name = "submit"
path = "src/submit.rs"

[[bin]]
name = "show"
path = "src/show.rs"

[[bin]]
name = "renew"
path = "src/renew.rs"
